# robot_mask_simulation

./: .gitignore  README.md  requirements.txt
assets/: ur10e.xml  ur5e.xml
examples/: cubemap_to_equirect.py  keyboard_ur5_control.py
lib/: MyRobot.py  Tiles2EquiCU.py
python/: requirements.txt  urdf_rending.py
python/equirect_mask_package/launch/: launch.launch
python/equirect_mask_package/src/: equirect_mask_node.py  ur10e.xml
python/mujoco_rendering/: MyRobot.py  scene.xml  scene2.xml  ur10e.xml  view_attached_cam_equirect.py  view_attached_cam_pinhole.py  view_free_cam_pinhole.py
python/obj_opengl_rendering/: _Camera.py  _EventHandler.py  _OBJFileLoader.py  cam_sim_obj.py
python/urdf_opengl_rendering/: _Camera.py  _EventHandler.py  _URDFFileLoader.py  cam_sim_urdf.py  urdf_rending.py
ros1 packages/equirect_mask_package/config/: ur10e.xml
ros1 packages/equirect_mask_package/src/: Tiles2EquiCU.py  equirect_mask_node.py
ros1_workspace/: README.md
ros1_workspace/config/: scene_ur5e_calibrated.xml  scene_ur5e_calibration.xml  ur5e.xml  ur5e_calibrated.xml  ur5e_calibration.xml
ros1_workspace/src/calibration_package/: package.xml
ros1_workspace/src/joint_state_publisher/: package.xml
ros1_workspace/src/kodak_publisher/: CMakeLists.txt  package.xml
ros1_workspace/src/kodak_publisher/launch/: kodak_publisher.launch
ros1_workspace/src/kodak_publisher/src/: kodak_publisher.py
urdf/: ur5.urdf
utils/: cubemap_vizualisation.py
utils/ros1_joint_state_minimal_publisher_package/src/: joint_state_publisher.py
utils/ros1_workspace/: README.md
(+24 files in other folders)
